# server-uptime-checker

./: .gitignore  Cargo.toml  README.md
config/: servers.json
src/: checker.rs  config.rs  main.rs  notifier.rs
