[package]
name = "server-uptime-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.10", features = ["smtp-transport"] }
tokio-cron-scheduler = "0.8.0"
log = "0.4"
simplelog = "0.12"
